[package]
name = "geo-api"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
lto = "fat"
panic = "abort"
codegen-units = 1

[dependencies]
anyhow = "1.0.102"
lru = "0.16.3"
maxminddb = { version = "0.27.3", features = ["mmap"] }
memmap2 = "0.9.10"
ntex = { version = "3.7.0", features = ["tokio"] }
num_cpus = "1.17.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
